[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["Nino Majder <nino.majder@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
home = "0.5"
structopt = "0.3"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
